fix: added more whitespace between footer and page content

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -207,7 +207,7 @@ ul {
 }
 
 .footer {
-  margin-top: 2rem;
+  margin-top: 7rem;
   background-color: var(--gray-backround-color);
   display: flex;
   justify-content: center;
